# Simple-Social

./: .gitignore  README.md
backend/: main.py  pyproject.toml  test.db
backend/app/: app.py  db.py  images.py  schemas.py  users.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: FeedPage.jsx  LoginPage.jsx  UploadPage.jsx
frontend/src/utils/: imagekit.js
